force-app/main/default/objects/RE_Location__c/RE_Location__c.object-meta.xml
<CustomObject>
    <label>RE Location</label>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RE Locations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>