force-app/main/default/objects/RE_Location__c/fields/RE_Abbreviated_Name__c.field-meta.xml
<CustomField>
    <fullName>RE_Abbreviated_Name__c</fullName>
    <label>Abbreviated Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>