force-app/main/default/objects/RE_Location__c/fields/RE_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>RE_Country_Code__c</fullName>
    <formula>RE_Country__r.RE_Country_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country Code</label>
    <type>Text</type>
</CustomField>