force-app/main/default/objects/RE_Location__c/fields/RE_IsSource__c.field-meta.xml
<CustomField>
    <fullName>RE_IsSource__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSource</label>
    <type>Checkbox</type>
</CustomField>