force-app/main/default/objects/RE_Location__c/fields/RE_Location_Code__c.field-meta.xml
<CustomField>
    <fullName>RE_Location_Code__c</fullName>
    <label>Location Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>