force-app/main/default/objects/RE_Location__c/fields/RE_Region_Name__c.field-meta.xml
<CustomField>
    <fullName>RE_Region_Name__c</fullName>
    <label>Region Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>