force-app/main/default/objects/RE_Location__c/fields/RT_Active__c.field-meta.xml
<CustomField>
    <fullName>RT_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>