force-app/main/default/objects/RE_Location__c/fields/RT_Import_Terminal__c.field-meta.xml
<CustomField>
    <fullName>RT_Import_Terminal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Import Terminal?</label>
    <type>Checkbox</type>
</CustomField>