force-app/main/default/objects/RE_Location__c/fields/RT_ImportProductRatio__c.field-meta.xml
<CustomField>
    <fullName>RT_ImportProductRatio__c</fullName>
    <label>Import Product Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>