force-app/main/default/objects/RE_Location__c/fields/RT_Location_Type__c.field-meta.xml
<CustomField>
    <fullName>RT_Location_Type__c</fullName>
    <label>Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RT_Import_Terminal__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Depot</fullName>
            </value>
            <value>
                <fullName>Refinery</fullName>
            </value>
            <value>
                <fullName>Retail Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>