force-app/main/default/objects/RE_Location__c/recordTypes/Philippines.recordType-meta.xml
<RecordType>
    <fullName>Philippines</fullName>
    <active>true</active>
    <label>Philippines</label>
</RecordType>