force-app/main/default/objects/RE_Location__c/recordTypes/Turkey.recordType-meta.xml
<RecordType>
    <fullName>Turkey</fullName>
    <active>true</active>
    <description>For turkey users</description>
    <label>Turkey</label>
</RecordType>