force-app/main/default/objects/RE_Location__c/listViews/Canada.listView-meta.xml
<ListView>
    <fullName>Canada</fullName>
    <columns>RE_Location_Code__c</columns>
    <columns>NAME</columns>
    <columns>RE_Abbreviated_Name__c</columns>
    <columns>RE_Country_Name__c</columns>
    <columns>RT_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RE_Location__c.Canada</value>
    </filters>
    <label>Canada</label>
    <sharedTo>
        <territoryAndSubordinates>Revolution_Territory.Canada</territoryAndSubordinates>
    </sharedTo>
</ListView>