force-app/main/default/objects/RE_Location__c/listViews/Malaysia.listView-meta.xml
<ListView>
    <fullName>Malaysia</fullName>
    <columns>NAME</columns>
    <columns>RE_Country__c</columns>
    <columns>RE_Region_Name__c</columns>
    <columns>RE_Location_Code__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>RE_Abbreviated_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RE_Location__c.Malaysia</value>
    </filters>
    <label>Malaysia</label>
    <sharedTo>
        <territoryAndSubordinates>Revolution_Territory.Malaysia</territoryAndSubordinates>
    </sharedTo>
</ListView>