force-app/main/default/objects/RE_Location__c/listViews/Philippines.listView-meta.xml
<ListView>
    <fullName>Philippines</fullName>
    <columns>NAME</columns>
    <columns>RE_Abbreviated_Name__c</columns>
    <columns>RE_Country__c</columns>
    <columns>RE_IsSource__c</columns>
    <columns>RE_Location_Code__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RE_Location__c.Philippines</value>
    </filters>
    <label>Philippines</label>
</ListView>