force-app/main/default/objects/RE_Location__c/listViews/RT_Depots.listView-meta.xml
<ListView>
    <fullName>RT_Depots</fullName>
    <columns>RE_Location_Code__c</columns>
    <columns>NAME</columns>
    <columns>RE_Abbreviated_Name__c</columns>
    <columns>RT_Import_Terminal__c</columns>
    <columns>RT_ImportProductRatio__c</columns>
    <columns>RT_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RT_Location_Type__c</field>
        <operation>equals</operation>
        <value>Depot</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RE_Location__c.Turkey</value>
    </filters>
    <label>Turkey Depots</label>
    <sharedTo>
        <territoryAndSubordinates>Revolution_Territory.Turkey</territoryAndSubordinates>
    </sharedTo>
</ListView>