force-app/main/default/objects/RE_Location__c/listViews/Singapore.listView-meta.xml
<ListView>
    <fullName>Singapore</fullName>
    <columns>NAME</columns>
    <columns>RE_Country__c</columns>
    <columns>RE_Region_Name__c</columns>
    <columns>RE_Location_Code__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RE_Location__c.Singapore</value>
    </filters>
    <label>Singapore</label>
    <sharedTo>
        <territoryAndSubordinates>Revolution_Territory.Singapore</territoryAndSubordinates>
    </sharedTo>
</ListView>